fix navigate menu hover jumps

--- a/css/project_nav.css
+++ b/css/project_nav.css
@@ -72,11 +72,10 @@ td.navigation-list a[href$='donate.html'], td.navigation-list a[href$='donate.ht
 	color: white;
 }
 
-#project-navigations td.navigation-list a:hover
+#project-navigation td.navigation-list a:hover
 {
 	background: rgb(254,204,177);
-	background:    linear-gradient(to bottom, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
-	background: -webkit-linear-gradient(top, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
+	background: linear-gradient(to bottom, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
 	color: white !important;
 	margin: 2px 3px 0px 2px !important;
 	text-decoration: none;
